--- a/modules/style.css
+++ b/modules/style.css
@@ -30,7 +30,7 @@
 /* ftp_log_panel --------------------------------------- */
 #au-ssftp-ftp_log_panel {}
 #au-ssftp-ftp_log_panel ul { overflow: scroll; height: 90%; }
-#au-ssftp-ftp_log_panel ul .log { display: block; border-bottom: solid 1px #444; }
+#au-ssftp-ftp_log_panel ul .log { display: block; border-bottom: solid 1px rgba(153,153,153,0.2); }
 #au-ssftp-ftp_log_panel ul .o, #au-ssftp-ftp_log_panel ul .e, #au-ssftp-ftp_log_panel ul .t, #au-ssftp-ftp_log_panel ul .d { display: inline-block; }
 #au-ssftp-ftp_log_panel ul .o { width: 200px; }
 #au-ssftp-ftp_log_panel ul .e { width: 150px; }
@@ -45,7 +45,8 @@
 /* server_manager_dialog --------------------------------------- */
 #au-ssftp-server_manager_dialog { min-height: 50px; overflow: inherit !important; }
 #au-ssftp-server_manager_dialog .modal-body { width: 100%; max-height: calc(100% - 50px); overflow: auto; box-sizing: border-box; }
-#au-ssftp-server_manager_dialog .jstree-brackets li { border-bottom: solid 1px #333; }
+#au-ssftp-server_manager_dialog .jstree-brackets-wrap { background-color: #333; padding: 20px; }
+#au-ssftp-server_manager_dialog .jstree-brackets li { border-bottom: solid 1px rgba(153,153,153,0.2); }
 #au-ssftp-server_manager_dialog ins.jstree-icon { left: -6px !important; }
 #au-ssftp-server_manager_dialog .date { float: right; width: 200px; text-align: right; opacity: 0.8; }
 #au-ssftp-server_manager_dialog .size { float: right; width: 200px; text-align: right; opacity: 0.8; }
@@ -54,3 +55,22 @@
 #au-ssftp-server_manager_dialog .download.comp { opacity: 0.2; }
 #au-ssftp-server_manager_dialog .delete { display: none; float: right; width: 50px; text-align: right; }
 #au-ssftp-server_manager_dialog .tab-pane { padding-top: 20px; }
+
+/* au-ssftp-dialog_modify_log --------------------------------------- */
+#au-ssftp-dialog_modify_log {}
+#au-ssftp-dialog_modify_log .modal-body { width: 100%; max-height: calc(100% - 50px); overflow: auto; box-sizing: border-box; }
+#au-ssftp-dialog_modify_log .modal-body table { width: 100%; border: solid 1px rgba(153,153,153,0.05); }
+#au-ssftp-dialog_modify_log .modal-body table tr:hover td { cursor: pointer; background-color: rgba(153,153,153,0.05); }
+#au-ssftp-dialog_modify_log .modal-body table tr.check td { background-color: rgba(153,153,153,0.3) !important; }
+#au-ssftp-dialog_modify_log .modal-body table th, #au-ssftp-dialog_modify_log .modal-body table td { padding: 10px; border-right: solid 1px rgba(153,153,153,0.05); border-bottom: solid 1px rgba(153,153,153,0.05); }
+#au-ssftp-dialog_modify_log .modal-body table th { background-color: rgba(153,153,153,0.1); }
+#au-ssftp-dialog_modify_log .modal-body table td {}
+#au-ssftp-dialog_modify_log .modal-body table td.p {}
+#au-ssftp-dialog_modify_log .modal-body table td.d { text-align: center; }
+#au-ssftp-dialog_modify_log .modal-body table td.u { text-align: center; }
+#au-ssftp-dialog_modify_log .danger { background-color: #d9534f !important; color: #FFF !important; }
+#au-ssftp-dialog_modify_log .modal-footer .btn { float: left; }
+#au-ssftp-dialog_modify_log .dialog-cancel { float: right !important; }
+#au-ssftp-dialog_modify_log .btw { overflow: hidden; }
+#au-ssftp-dialog_modify_log .btw .bt1 { float: left; }
+#au-ssftp-dialog_modify_log .btw .bt2 { float: right; }
