--- a/modules/style.css
+++ b/modules/style.css
@@ -64,6 +64,7 @@
 #au-ssftp-dialog_modify_log .modal-body table tr.check td { background-color: rgba(153,153,153,0.3) !important; }
 #au-ssftp-dialog_modify_log .modal-body table th, #au-ssftp-dialog_modify_log .modal-body table td { padding: 10px; border-right: solid 1px rgba(153,153,153,0.05); border-bottom: solid 1px rgba(153,153,153,0.05); }
 #au-ssftp-dialog_modify_log .modal-body table th { background-color: rgba(153,153,153,0.1); }
+#au-ssftp-dialog_modify_log .modal-body table th:hover { background-color: rgba(153,153,153,0.2); }
 #au-ssftp-dialog_modify_log .modal-body table td {}
 #au-ssftp-dialog_modify_log .modal-body table td.p {}
 #au-ssftp-dialog_modify_log .modal-body table td.d { text-align: center; }
@@ -74,3 +75,21 @@
 #au-ssftp-dialog_modify_log .btw { overflow: hidden; }
 #au-ssftp-dialog_modify_log .btw .bt1 { float: left; }
 #au-ssftp-dialog_modify_log .btw .bt2 { float: right; }
+
+/* au-ssftp-dialog_select_file --------------------------------------- */
+#au-ssftp-dialog_select_file {}
+#au-ssftp-dialog_select_file .modal-body { width: 100%; max-height: calc(100% - 50px); overflow: auto; box-sizing: border-box; }
+#au-ssftp-dialog_select_file .modal-body table { width: 100%; border: solid 1px rgba(153,153,153,0.05); }
+#au-ssftp-dialog_select_file .modal-body table tr:hover td { cursor: pointer; background-color: rgba(153,153,153,0.05); }
+#au-ssftp-dialog_select_file .modal-body table tr.check td { background-color: rgba(153,153,153,0.3) !important; }
+#au-ssftp-dialog_select_file .modal-body table th, #au-ssftp-dialog_select_file .modal-body table td { padding: 10px; border-right: solid 1px rgba(153,153,153,0.05); border-bottom: solid 1px rgba(153,153,153,0.05); }
+#au-ssftp-dialog_select_file .modal-body table th { background-color: rgba(153,153,153,0.1); }
+#au-ssftp-dialog_select_file .modal-body table th:hover { background-color: rgba(153,153,153,0.2); }
+#au-ssftp-dialog_select_file .modal-body table td {}
+#au-ssftp-dialog_select_file .modal-body table td.p {}
+#au-ssftp-dialog_select_file .danger { background-color: #d9534f !important; color: #FFF !important; }
+#au-ssftp-dialog_select_file .modal-footer .btn { float: left; }
+#au-ssftp-dialog_select_file .dialog-cancel { float: right !important; }
+#au-ssftp-dialog_select_file .btw { overflow: hidden; }
+#au-ssftp-dialog_select_file .btw .bt1 { float: left; }
+#au-ssftp-dialog_select_file .btw .bt2 { float: right; }
