--- a/modules/style.css
+++ b/modules/style.css
@@ -72,7 +72,7 @@
 #au-ssftp-dialog_modify_log .danger { background-color: #d9534f !important; color: #FFF !important; }
 #au-ssftp-dialog_modify_log .modal-footer .btn { float: left; }
 #au-ssftp-dialog_modify_log .dialog-cancel { float: right !important; }
-#au-ssftp-dialog_modify_log .btw { overflow: hidden; }
+#au-ssftp-dialog_modify_log .btw { overflow: hidden; padding-top: 15px; margin-top: 10px; border-top: solid 1px rgba(127,127,127,0.2); }
 #au-ssftp-dialog_modify_log .btw .bt1 { float: left; }
 #au-ssftp-dialog_modify_log .btw .bt2 { float: right; }
 
@@ -90,6 +90,25 @@
 #au-ssftp-dialog_select_file .danger { background-color: #d9534f !important; color: #FFF !important; }
 #au-ssftp-dialog_select_file .modal-footer .btn { float: left; }
 #au-ssftp-dialog_select_file .dialog-cancel { float: right !important; }
-#au-ssftp-dialog_select_file .btw { overflow: hidden; }
+#au-ssftp-dialog_select_file .btw { overflow: hidden; padding-top: 15px; margin-top: 10px; border-top: solid 1px rgba(127,127,127,0.2); }
 #au-ssftp-dialog_select_file .btw .bt1 { float: left; }
 #au-ssftp-dialog_select_file .btw .bt2 { float: right; }
+
+/* au-ssftp-dialog_recently_changed_files --------------------------------------- */
+#au-ssftp-dialog_recently_changed_files {}
+#au-ssftp-dialog_recently_changed_files .modal-body { width: 100%; max-height: calc(100% - 50px); overflow: auto; box-sizing: border-box; }
+#au-ssftp-dialog_recently_changed_files .modal-body table { width: 100%; border: solid 1px rgba(153,153,153,0.05); }
+#au-ssftp-dialog_recently_changed_files .modal-body table tr:hover td { cursor: pointer; background-color: rgba(153,153,153,0.05); }
+#au-ssftp-dialog_recently_changed_files .modal-body table tr.check td { background-color: rgba(153,153,153,0.3) !important; }
+#au-ssftp-dialog_recently_changed_files .modal-body table th, #au-ssftp-dialog_recently_changed_files .modal-body table td { padding: 10px; border-right: solid 1px rgba(153,153,153,0.05); border-bottom: solid 1px rgba(153,153,153,0.05); }
+#au-ssftp-dialog_recently_changed_files .modal-body table th { background-color: rgba(153,153,153,0.1); }
+#au-ssftp-dialog_recently_changed_files .modal-body table th:hover { background-color: rgba(153,153,153,0.2); }
+#au-ssftp-dialog_recently_changed_files .modal-body table td {}
+#au-ssftp-dialog_recently_changed_files .modal-body table td.p {}
+#au-ssftp-dialog_recently_changed_files .danger { background-color: #d9534f !important; color: #FFF !important; }
+#au-ssftp-dialog_recently_changed_files .modal-footer .btn { float: left; }
+#au-ssftp-dialog_recently_changed_files .dialog-cancel { float: right !important; }
+#au-ssftp-dialog_recently_changed_files .btw { overflow: hidden; padding-top: 15px; margin-top: 10px; border-top: solid 1px rgba(127,127,127,0.2); }
+#au-ssftp-dialog_recently_changed_files .btw .bt1 { float: left; }
+#au-ssftp-dialog_recently_changed_files .btw .bt2 { float: right; }
+#au-ssftp-dialog_recently_changed_files .input-day { width: 50px; }
